Name:                   lifeline
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Server
                        Application
                        Application.Types
                        Pages.Home
                        Pages.NotFound
                        Routes
                        Templates.Master
                        Templates.MainStyles
                        Schema
  Other-Modules:        Server.Internal
                        Imports
  Build-Depends:        base >= 4.6 && < 5
                      , aeson
                      , attoparsec
                      , bytestring
                      , containers
                      , data-default
                      , directory
                      , exceptions
                      , http-types
                      , lucid
                      , markup >= 3.1.0
                      , mmorph
                      , monad-control
                      , monad-logger
                      , mtl
                      , nested-routes >= 6.1.0
                      , path-extra >= 0.0.2
                      , persistent
                      , persistent-template
                      , persistent-sqlite
                      , regex-compat
                      , resourcet
                      , shakespeare
                      , stm
                      , text
                      , transformers
                      , time
                      , urlpath >= 4.1.0
                      , wai
                      , wai-transformers >= 0.0.2
                      , wai-extra
                      , webpage

Executable lifeline
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Main-Is:              Main.hs
  Other-Modules:        Application
                        Application.Types
                        Application.Types.HTTP
                        Imports
                        Pages.Home
                        Pages.NotFound
                        Routes
                        Schema
                        Templates.Master
  Build-Depends:        base >= 4 && < 5
                      , attoparsec
                      , aeson
                      , bytestring
                      , containers
                      , directory
                      , data-default
                      , exceptions
                      , http-types
                      , lucid
                      , markup
                      , mmorph
                      , monad-control
                      , monad-logger
                      , mtl
                      , nested-routes
                      , optparse-applicative
                      , path-extra
                      , persistent
                      , persistent-template
                      , persistent-sqlite
                      , regex-compat
                      , resourcet
                      , shakespeare
                      , text
                      , transformers
                      , time
                      , urlpath
                      , warp
                      , wai-transformers
                      , wai-extra
                      , webpage
                      , yaml

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , QuickCheck
                      , quickcheck-instances

Source-Repository head
  Type:                 git
--  Location:
